Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 3.907 devel

****  Support x in $readmem, bug1180. [Arthur Kahlich]

****  Fix GCC 6 warnings.


* Verilator 3.906 2017-06-22

***   Support set_time_unit/set_time_precision in C traces, msg2261.

***   Fix extract of packed array with non-zero LSB, bug1172. [James Pallister]

***   Fix shifts by more than 32-bit numbers, bug1174. [Clifford Wolf]

***   Fix power operator on wide constants, bug761. [Clifford Wolf]

***   Fix .* on interface pins, bug1176. [Maciej Piechotka]


* Verilator 3.904 2017-05-30

***   Fix non-cutable ordering loops on clock arrays, bug1009. [Todd Strader]

***   Support ports of array of reals, bug1154. [J Briquet]

***   Support arrayed parameter overrides, bug1153. [John Stevenson]

***   Support $value$plusargs with variables, bug1165. [Wesley Terpstra]

****  Support modport access to un-modport objects, bug1161. [Todd Strader]

****  Add stack trace when can't optimize function, bug1158. [Todd Strader]

****  Add warning on mis-sized literal, bug1156. [Todd Strader]

****  Fix interface functions returning wrong parameters, bug996. [Todd Strader]

****  Fix non-arrayed cells with interface arrays, bug1153. [John Stevenson]

****  Fix --assert with complex case statements, bug1164. [Enzo Chi]


* Verilator 3.902 2017-04-02

**    Add -FI option to force includes,msg2146. [Amir Gonnen]

**    Add --relative-includes. [Rob Stoddard]

***   Add error on duplicate pattern assignments, bug1145. [Johan Bjork]

****  Fix error on improperly widthed default function, bug984. [Todd Strader]

****  Fix 2009 localparam syntax, msg2139. [Galen Seitz]

****  Fix ugly interface-to-non-interface errors, bug1112. [Johan Bjork]

****  Fix LDFLAGS and CFLAGS not preserving order, bug1130. [Olof Kindgren]

****  Fix internal error on initializing parameter array, bug1131. [Jie Xu]
